--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@angular/platform-browser": "~20.3.0",
     "@angular/router": "~20.3.0",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@nx/angular": "21.6.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~20.3.0",
@@ -22,11 +23,13 @@
     "@angular/compiler-cli": "~20.3.0",
     "@angular/language-service": "~20.3.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "21.6.2",
+    "@module-federation/enhanced": "^0.18.0",
     "@nx/eslint": "21.6.2",
     "@nx/eslint-plugin": "21.6.2",
     "@nx/js": "21.6.2",
+    "@nx/module-federation": "21.6.2",
     "@nx/web": "21.6.2",
+    "@nx/webpack": "21.6.2",
     "@nx/workspace": "21.6.2",
     "@schematics/angular": "~20.3.0",
     "@swc-node/register": "~1.9.1",
