--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@angular/platform-browser": "~20.3.0",
     "@angular/router": "~20.3.0",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0",
-    "@nx/angular": "21.6.2"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~20.3.0",
@@ -24,6 +23,7 @@
     "@angular/language-service": "~20.3.0",
     "@eslint/js": "^9.8.0",
     "@module-federation/enhanced": "^0.18.0",
+    "@nx/angular": "^21.6.2",
     "@nx/eslint": "21.6.2",
     "@nx/eslint-plugin": "21.6.2",
     "@nx/js": "21.6.2",
