--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "cart/Routes": ["apps/cart/src/app/remote-entry/entry.routes.ts"],
+      "products/Routes": ["apps/products/src/app/remote-entry/entry.routes.ts"],
       "remote1/Routes": ["apps/remote1/src/app/remote-entry/entry.routes.ts"],
       "remote2/Routes": ["apps/remote2/src/app/remote-entry/entry.routes.ts"]
     }
