--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@angular/forms": "~20.3.0",
     "@angular/platform-browser": "~20.3.0",
     "@angular/router": "~20.3.0",
+    "@ngrx/store": "^20.0.1",
+    "@ngrx/store-devtools": "^20.0.1",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
