--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "@angular/language-service": "~20.3.0",
     "@eslint/js": "^9.8.0",
     "@module-federation/enhanced": "^0.18.0",
-    "@nx/angular": "^21.6.2",
-    "@nx/eslint": "21.6.2",
-    "@nx/eslint-plugin": "21.6.2",
-    "@nx/js": "21.6.2",
-    "@nx/module-federation": "21.6.2",
-    "@nx/web": "21.6.2",
-    "@nx/webpack": "21.6.2",
-    "@nx/workspace": "21.6.2",
+    "@nx/angular": "22.0.3",
+    "@nx/eslint": "22.0.3",
+    "@nx/eslint-plugin": "22.0.3",
+    "@nx/js": "22.0.3",
+    "@nx/module-federation": "22.0.3",
+    "@nx/web": "22.0.3",
+    "@nx/webpack": "22.0.3",
+    "@nx/workspace": "22.0.3",
     "@schematics/angular": "~20.3.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -41,7 +41,7 @@
     "angular-eslint": "^20.3.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
-    "nx": "21.6.2",
+    "nx": "22.0.3",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
